--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ body {
   padding: 50px
 }
 .description {
-  width: 45%;
+  min-width: 500px;
   height: 450px;
 }
 .description > h2 {
@@ -22,4 +22,12 @@ body {
 .description > p {
   color: black;
   font-size: 20px;
+}
+.data {
+  display: flex;
+}
+fieldset {
+  display: flex;
+  flex-direction: column;
+  
 }
