--- a/css/Bootstrap/bootstrap-5.1.0-dist/css/bootstrap.css
+++ b/css/Bootstrap/bootstrap-5.1.0-dist/css/bootstrap.css
@@ -2966,6 +2966,8 @@ textarea.form-control-lg {
   color: #fff;
   background-color: #0d6efd;
   border-color: #0d6efd;
+  position: relative;
+  left: 210px;
 }
 .btn-primary:hover {
   color: #fff;
